tests/neg/i3901.scala
object Crash {
  def f(cond: => Boolean): cond.type = ???  // error: cond is not stable
  f(true)
}
